--- a/demoSorting/src/main/resources/application.properties
+++ b/demoSorting/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+#Email setup
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=beharudinmm@gmail.com
+spring.mail.password=xfcs yjln splz jukl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
